fix admin script

--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1115,7 +1115,7 @@
             }
         }
         &.mobile {
-            > .row {
+            .patient-dentist-data {
                 display: flex;
                 display: -webkit-box;
                 display: -webkit-flex;
