--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8732,7 +8732,7 @@ select.select-mac-fix {
       background-color: #126585; }
 .module.single-contract-tile .camping-for-popups .popup-step-two {
   display: none; }
-.module.single-contract-tile.mobile > .row {
+.module.single-contract-tile.mobile .patient-dentist-data {
   display: flex;
   display: -webkit-box;
   display: -webkit-flex;
