--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6838,6 +6838,12 @@ fieldset {
 @media screen and (max-width: 767px) {
   .bootbox .modal-dialog {
     margin-bottom: 50px; } }
+.bootbox.qr-code-for-dentacoin-wallet-scan #popup-qrcode {
+  text-align: center; }
+  .bootbox.qr-code-for-dentacoin-wallet-scan #popup-qrcode img {
+    width: 100%;
+    max-width: 450px;
+    margin: 0 auto; }
 .bootbox.style-anchors .modal-dialog .modal-content .modal-body a {
   font-weight: bold;
   text-decoration: underline; }
