--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7833,8 +7833,9 @@ select.select-mac-fix {
     fill: #239234; }
   .green-white-btn:hover {
     background-color: #239234;
-    color: white;
-    fill: white; }
+    color: white; }
+    .green-white-btn:hover path {
+      fill: white; }
   .green-white-btn:focus {
     color: white; }
 
@@ -7861,8 +7862,9 @@ select.select-mac-fix {
     fill: #126585; }
   .blue-green-white-btn:hover {
     background-color: #239234;
-    color: white;
-    fill: white; }
+    color: white; }
+    .blue-green-white-btn:hover path {
+      fill: white; }
   .blue-green-white-btn:hover {
     color: white;
     background-color: #126585; }
