--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -31,6 +31,7 @@
         /*.dataTables_wrapper {
             overflow-x: scroll;
         }*/
+        overflow: auto;
         .hide-this {
             display: none;
         }
@@ -200,7 +201,7 @@
             white-space: nowrap;
             figure {
                 width: 45px;
-                padding-right: 5px;
+                padding-left: 5px;
             }
         }
         .status {
