--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9242,7 +9242,7 @@ header {
       position: absolute;
       top: calc(100% - 15px);
       font-size: 16px;
-      z-index: 5000000000;
+      z-index: 2000000015 !important;
       right: 30px;
       display: none; }
       header > .container .logged-user-nav .up-arrow.show-this {
@@ -9259,7 +9259,7 @@ header {
       right: 0;
       background-color: white;
       overflow: hidden;
-      z-index: 50;
+      z-index: 2000000010 !important;
       -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
       -moz-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
       -ms-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.5);
