--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -57,7 +57,7 @@ header {
                 position: absolute;
                 top: calc(100% - 15px);
                 font-size: 16px;
-                z-index: 5000000000;
+                z-index: 2000000015!important;
                 right: 30px;
                 display: none;
                 &.show-this {
@@ -79,7 +79,7 @@ header {
                 right: 0;
                 background-color: white;
                 overflow: hidden;
-                z-index: 50;
+                z-index: 2000000010!important;
                 @include box-shadow(0px 0px 7px 1px rgba(0, 0, 0, 0.5));
                 @include rounded(15px);
                 .hidden-box-hub {
