test record checkup and teeth cleaning

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9303,8 +9303,10 @@ header {
       header > .container .logged-user-nav .hidden-box .hidden-box-footer {
         padding-top: 10px;
         padding-bottom: 10px;
-        background: white;
-        margin-bottom: 100px; }
+        background: white; }
+        @media screen and (max-width: 767px) {
+          header > .container .logged-user-nav .hidden-box .hidden-box-footer {
+            margin-bottom: 100px; } }
         header > .container .logged-user-nav .hidden-box .hidden-box-footer .white-blue-rounded-btn {
           padding: 7px 15px; }
         header > .container .logged-user-nav .hidden-box .hidden-box-footer .logout {
