--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -124,7 +124,9 @@ header {
                     padding-top: 10px;
                     padding-bottom: 10px;
                     background: white;
-                    margin-bottom: 100px;
+                    @include breakpoint($xs) {
+                        margin-bottom: 100px;
+                    }
                     .white-blue-rounded-btn {
                         padding: 7px 15px;
                     }
