--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -849,7 +849,7 @@
             padding-top: 15px;
             .nav-btn {
                 font-size: 35px;
-                padding: 5px 12px;
+                padding: 10px 20px;
                 border: 2px solid $dark_color;
                 line-height: 14px;
                 color: $dark_color;
@@ -886,7 +886,8 @@
                 display: none;
                 z-index: 10;
                 background-color: white;
-                width: 230px;
+                font-size: 20px;
+                width: 260px;
                 top: 100%;
                 @include horizontal-align(absolute);
                 @include rounded(4px);
@@ -896,7 +897,7 @@
                 }
                 li {
                     display: block;
-                    padding: 7px;
+                    padding: 10px;
                     border-bottom: 1px solid $light_gray;
                 }
             }
