--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6868,12 +6868,15 @@ fieldset {
 @media screen and (max-width: 767px) {
   .bootbox .modal-dialog {
     margin-bottom: 50px; } }
-.bootbox.qr-code-for-dentacoin-wallet-scan #popup-qrcode {
-  text-align: center; }
-  .bootbox.qr-code-for-dentacoin-wallet-scan #popup-qrcode img {
-    width: 100%;
-    max-width: 450px;
-    margin: 0 auto; }
+.bootbox.qr-code-for-dentacoin-wallet-scan .modal-dialog {
+  width: 95%;
+  max-width: 1100px; }
+  .bootbox.qr-code-for-dentacoin-wallet-scan .modal-dialog #popup-qrcode {
+    text-align: center; }
+    .bootbox.qr-code-for-dentacoin-wallet-scan .modal-dialog #popup-qrcode img {
+      width: 100%;
+      max-width: 1000px;
+      margin: 0 auto; }
 .bootbox.style-anchors .modal-dialog .modal-content .modal-body a {
   font-weight: bold;
   text-decoration: underline; }
