--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7464,6 +7464,9 @@ fieldset {
 .display-block {
   display: block; }
 
+.position-relative {
+  position: relative; }
+
 input[type='file'].hide-input {
   display: none; }
 
@@ -9190,6 +9193,54 @@ select.select-mac-fix {
       cursor: pointer; }
     .module.contract-response-message .wrapper h1 i {
       color: #888888; }
+.module.search-result {
+  display: none;
+  background-color: white;
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.25);
+  -ms-box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.25); }
+  .module.search-result .search-body {
+    max-height: 250px;
+    min-height: 120px;
+    overflow-y: auto; }
+    .module.search-result .search-body ul {
+      width: 100%; }
+      .module.search-result .search-body ul li a {
+        padding: 5px 15px;
+        cursor: pointer;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -o-transition: 0.3s;
+        -ms-transition: 0.3s;
+        transition: 0.3s; }
+        .module.search-result .search-body ul li a:hover {
+          color: white; }
+      .module.search-result .search-body ul li.removeable-element a {
+        width: calc(100% - 40px);
+        font-size: 16px; }
+        @media screen and (max-width: 767px) {
+          .module.search-result .search-body ul li.removeable-element a {
+            word-wrap: break-word; } }
+      .module.search-result .search-body ul li.removeable-element button {
+        width: 40px;
+        border: 0;
+        padding: 0;
+        background: transparent;
+        font-size: 26px; }
+  .module.search-result .search-footer {
+    margin-top: 10px;
+    border-top: 1.5px solid #dddddd; }
+    .module.search-result .search-footer a {
+      display: block;
+      padding: 10px 15px; }
 
 header {
   width: 100%;
