--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1421,6 +1421,10 @@ fieldset {
     display: block;
 }
 
+.position-relative {
+    position: relative;
+}
+
 input[type='file'].hide-input {
     display: none;
 }
