--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -580,6 +580,9 @@
                         word-break: break-all;
                     }
                 }
+                &.no-padding {
+                    padding: 0;
+                }
             }
             input.right-field {
                 cursor: pointer;
@@ -1596,12 +1599,14 @@
             ul {
                 width: 100%;
                 li {
+                    color: $blue_green_color;
                     a {
                         padding: 5px 15px;
                         cursor: pointer;
                         @include simple_transition(.3s);
                         &:hover {
                             color: white;
+                            background-color: $blue_green_color;
                         }
                     }
                     &.removeable-element {
@@ -1629,6 +1634,7 @@
             a {
                 display: block;
                 padding: 10px 15px;
+                color: $blue_green_color;
             }
         }
     }
