--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -4,6 +4,16 @@
             background-color: #ebebeb;
         }
     }
+    &.awaiting-approval {
+        .checkbox-container {
+            .pretty {
+                white-space: normal;
+            }
+            .pretty .state label:after, .pretty .state label:before {
+                top: 0 !important;  
+            }
+        }
+    }
     .camping-withdraw-section {
         .dentist-withdraw {
             &:hover {
