--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7473,17 +7473,24 @@ input[type='file'].hide-input {
 .display-block-important {
   display: block !important; }
 
+.sticky-open-calculator-container {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: 5000 !important; }
+  .sticky-open-calculator-container .open-calculator img {
+    width: 300px; }
+    @media screen and (max-width: 767px) {
+      .sticky-open-calculator-container .open-calculator img {
+        width: 220px; } }
+
 .bottom-fixed-container {
   position: fixed;
   width: 100%;
   bottom: 0;
   left: 0;
   z-index: 2000000005 !important; }
-  .bottom-fixed-container .open-calculator img {
-    width: 300px; }
-    @media screen and (max-width: 767px) {
-      .bottom-fixed-container .open-calculator img {
-        width: 220px; } }
   .bottom-fixed-container .banner {
     -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
