--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1435,17 +1435,20 @@ input[type='file'].hide-input {
 
 .sticky-open-calculator-container {
     position: fixed;
-    width: 100%;
     bottom: 0;
-    left: 0;
-    z-index: 5000!important;
+    z-index: 1000;
+    width: 300px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
     .open-calculator {
         img {
-            width: 300px;
-            @include breakpoint($xs) {
-                width: 220px;
-            }
+            width: 100%;
         }
+    }
+    @include breakpoint($xs) {
+        width: 220px;
     }
 }
 
