debug free eth sending to dentist

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10746,7 +10746,7 @@ section.contract-proposal .wrapper .step-fields .singatures-row {
     cursor: pointer; }
 .single-contract-view-section.awaiting-approval .checkbox-container .pretty .state label:after, .single-contract-view-section.awaiting-approval .checkbox-container .pretty .state label:before {
   top: 0 !important; }
-.single-contract-view-section .camping-withdraw-section .dentist-withdraw:hover .st0 {
+.single-contract-view-section .camping-for-popups .dentist-withdraw:hover .st0 {
   fill: #126585; }
 .single-contract-view-section .camping-withdraw-time-left-section h2 {
   color: #888888; }
