--- a/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_single-contract-view.scss
@@ -18,7 +18,7 @@
             }
         }
     }
-    .camping-withdraw-section {
+    .camping-for-popups {
         .dentist-withdraw {
             &:hover {
                 .st0 {
