--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7756,6 +7756,20 @@ select.select-mac-fix {
     display: block;
     text-align: center; } }
 
+#search-result-parent {
+  position: relative; }
+  #search-result-parent #search-result-parent:after {
+    content: '';
+    right: 10px;
+    border-style: solid;
+    border-width: 14px 6px 0 6px;
+    border-color: #616161 transparent transparent transparent;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); }
+
 .white-blue-green-btn {
   font-size: 20px;
   color: white;
