--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1681,6 +1681,15 @@
       display: block;
       padding: 10px 15px;
       color: #126585; }
+.module.records-history table {
+  width: 100%;
+  font-size: 16px; }
+  .module.records-history table td {
+    padding: 5px; }
+  .module.records-history table tr {
+    border-bottom: 1.5px solid #c9c9c9; }
+  .module.records-history table thead tr {
+    background-color: #dddddd; }
 
 body {
   background-color: #222d32; }
