--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9290,6 +9290,15 @@ select.select-mac-fix {
       display: block;
       padding: 10px 15px;
       color: #126585; }
+.module.records-history table {
+  width: 100%;
+  font-size: 16px; }
+  .module.records-history table td {
+    padding: 5px; }
+  .module.records-history table tr {
+    border-bottom: 1.5px solid #c9c9c9; }
+  .module.records-history table thead tr {
+    background-color: #dddddd; }
 
 header {
   width: 100%;
