check records history

--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -166,6 +166,9 @@
 .cancelled-color {
   color: #e92f30; }
 
+.active-color {
+  color: #239234; }
+
 .white-blue-green-btn {
   font-size: 20px;
   color: white;
