--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1689,6 +1689,8 @@
   font-size: 16px; }
   .module.records-history table td, .module.records-history table th {
     padding: 8px 5px; }
+    .module.records-history table td a, .module.records-history table th a {
+      text-decoration: underline; }
   .module.records-history table td:first-child {
     width: 32.5%;
     padding-left: 12.5%; }
