--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9298,6 +9298,8 @@ select.select-mac-fix {
   font-size: 16px; }
   .module.records-history table td, .module.records-history table th {
     padding: 8px 5px; }
+    .module.records-history table td a, .module.records-history table th a {
+      text-decoration: underline; }
   .module.records-history table td:first-child {
     width: 32.5%;
     padding-left: 12.5%; }
