--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -639,10 +639,16 @@ fieldset {
             margin-bottom: 50px;
         }
     }
+    .bootbox-close-button {
+        font-size: 40px;
+        padding: 5px;
+        line-height: 20px;
+        cursor: pointer;
+    }
     &.qr-code-for-dentacoin-wallet-scan {
         .modal-dialog {
             width: 95%;
-            max-width: 900px;
+            max-width: 800px;
             .icon-title-row {
                 font-size: 0;
                 max-width: 500px;
