--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9353,6 +9353,8 @@ select.select-mac-fix {
       display: block;
       padding: 10px 15px;
       color: #126585; }
+.module.records-history .mobile-slide {
+  display: none; }
 .module.records-history table {
   width: 100%;
   font-size: 16px; }
@@ -9372,6 +9374,13 @@ select.select-mac-fix {
       .module.records-history table thead tr th:first-child {
         width: 32.5%;
         padding-left: 12.5%; }
+@media screen and (max-width: 991px) {
+  .module.records-history .mobile-overflow-y-auto {
+    overflow-y: auto; }
+  .module.records-history table {
+    min-width: 800px; }
+  .module.records-history .mobile-slide {
+    display: block; } }
 
 header {
   width: 100%;
