--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1709,6 +1709,9 @@
         }
     }
     &.records-history {
+        .mobile-slide {
+            display: none;
+        }
         table {
             width: 100%;
             font-size: 16px;
@@ -1738,6 +1741,17 @@
                         }
                     }
                 }
+            }
+        }
+        @include breakpoint($sm-down) {
+            .mobile-overflow-y-auto {
+                overflow-y: auto;
+            }
+            table {
+                min-width: 800px;
+            }
+            .mobile-slide {
+                display: block;
             }
         }
     }
