--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -164,6 +164,7 @@
     -ms-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4); } }
 .box-shadow-animation {
+  animation-iteration-count: 5;
   -webkit-animation-fill-mode: forwards;
   -moz-animation-fill-mode: forwards;
   -o-animation-fill-mode: forwards;
@@ -176,14 +177,14 @@
   -moz-animation-name: boxShadowAnimation;
   animation-name: boxShadowAnimation;
   -o-animation-name: boxShadowAnimation;
-  -webkit-animation-duration: 1.25s;
-  -moz-animation-duration: 1.25s;
-  animation-duration: 1.25s;
-  -o-animation-duration: 1.25s;
-  -o-animation-timing-function: infinite;
-  -webkit-animation-timing-function: infinite;
-  -moz-animation-timing-function: infinite;
-  animation-timing-function: infinite; }
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+  -o-animation-duration: 1s;
+  -o-animation-timing-function: ease;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-timing-function: ease;
+  animation-timing-function: ease; }
 
 @media screen and (max-width: 450px) {
   .col-xxs-12 {
