--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -972,6 +972,7 @@
                     display: block;
                     padding: 10px;
                     border-bottom: 1px solid $light_gray;
+                    max-width: none !important;
                 }
             }
         }
